--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,13 +5,14 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
     script(src="http://maps.google.com/maps/api/js?sensor=false")
+    script(type="text/javascript", src="http://jquery-csv.googlecode.com/git/src/jquery.csv.js")
     style(type='text/css')
       html, body {
           width: 100%;
           height: 100%;
         }
         #map_canvas {
-          height: 440px;
+          height: 340px;
           width: 940px;
         }
     script(type='text/javascript', src='/javascripts/script.js')
